workloads/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: api
  labels:
    tier: web
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
